--- a/examples/llm/vdb_upload/vdb_config.yaml
+++ b/examples/llm/vdb_upload/vdb_config.yaml
@@ -51,23 +51,27 @@ vdb_pipeline:
           - "https://www.wired.com/feed/tag/ai/latest/rss"
           - "https://blog.google/threat-analysis-group/rss/"
           - "https://intezer.com/feed/"
-        batch_size: 1024
+        batch_size: 128 # Number of rss feeds to process at a time
         cache_dir: "./.cache/http"
-        cooldown_interval: 600
+        cooldown_interval_sec: 600
         enable_cache: False
         enable_monitor: True
-        interval_secs: 600
-        request_timeout: 2.0
+        interval_sec: 600
+        request_timeout_sec: 2.0
         run_indefinitely: true
         stop_after: 0
         web_scraper_config:
           chunk_size: 512
+          chunk_overlap: 51
           enable_cache: false
 
+    # TODO(Bhargav): Find a dataset for us to use to demo the different filesystem possibilties.
     - type: filesystem
       name: "demo_filesystem_source"
       config:
         batch_size: 1024
+        chunk_size: 512
+        chunk_overlap: 51
         enable_monitor: False
         extractor_config:
           chunk_size: 512
@@ -83,6 +87,7 @@ vdb_pipeline:
         watch: false
         converters_meta:
             csv:
+              chunk_size: 1024
               text_column_name: "raw" # Requires same schema for all CSV files.
 
     # Custom source example -- Here we just use the filesystem source but specify the module to use, explicitly.
@@ -94,6 +99,8 @@ vdb_pipeline:
         module_id: "file_source_pipe"
         module_output_id: "output"
         batch_size: 1024
+        chunk_size: 512
+        chunk_overlap: 51
         filenames:
           - "morpheus/data/scratch/random_cybersecurity_data.txt"
           - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
