--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -101,7 +101,7 @@ outputs:
         - requests=2.31
         - requests-cache=1.1
         - scikit-learn 1.2.2.*
-        - sqlalchemy <=2.0 # 2.0 is incompatible with pandas=1.3
+        - sqlalchemy <2.0 # 2.0 is incompatible with pandas=1.3
         - tqdm 4.*
         - tritonclient 2.26.*
         - typing_utils 0.1.*
