--- a/examples/llm/vdb_upload/vdb_config.yaml
+++ b/examples/llm/vdb_upload/vdb_config.yaml
@@ -15,55 +15,55 @@
 
 vdb_pipeline:
   sources:
-    - type: rss
-      name: "rss_cve"
-      config:
-        feed_input:
-          - "https://www.theregister.com/security/headlines.atom"
-          - "https://isc.sans.edu/dailypodcast.xml"
-          - "https://threatpost.com/feed/"
-          - "http://feeds.feedburner.com/TheHackersNews?format=xml"
-          - "https://www.bleepingcomputer.com/feed/"
-          - "https://therecord.media/feed/"
-          - "https://blog.badsectorlabs.com/feeds/all.atom.xml"
-          - "https://krebsonsecurity.com/feed/"
-          - "https://www.darkreading.com/rss_simple.asp"
-          - "https://blog.malwarebytes.com/feed/"
-          - "https://msrc.microsoft.com/blog/feed"
-          - "https://securelist.com/feed"
-          - "https://www.crowdstrike.com/blog/feed/"
-          - "https://threatconnect.com/blog/rss/"
-          - "https://news.sophos.com/en-us/feed/"
-          - "https://www.us-cert.gov/ncas/current-activity.xml"
-          - "https://www.csoonline.com/feed"
-          - "https://www.cyberscoop.com/feed"
-          - "https://research.checkpoint.com/feed"
-          - "https://feeds.fortinet.com/fortinet/blog/threat-research"
-          - "https://www.mcafee.com/blogs/rss"
-          - "https://www.digitalshadows.com/blog-and-research/rss.xml"
-          - "https://www.nist.gov/news-events/cybersecurity/rss.xml"
-          - "https://www.sentinelone.com/blog/rss/"
-          - "https://www.bitdefender.com/blog/api/rss/labs/"
-          - "https://www.welivesecurity.com/feed/"
-          - "https://unit42.paloaltonetworks.com/feed/"
-          - "https://mandiant.com/resources/blog/rss.xml"
-          - "https://www.wired.com/feed/category/security/latest/rss"
-          - "https://www.wired.com/feed/tag/ai/latest/rss"
-          - "https://blog.google/threat-analysis-group/rss/"
-          - "https://intezer.com/feed/"
-        batch_size: 128 # Number of rss feeds to process at a time
-        cache_dir: "./.cache/http"
-        cooldown_interval_sec: 600
-        enable_cache: False
-        enable_monitor: True
-        interval_sec: 600
-        request_timeout_sec: 2.0
-        run_indefinitely: true
-        stop_after: 0
-        web_scraper_config:
-          chunk_size: 512
-          chunk_overlap: 51
-          enable_cache: false
+    #- type: rss
+    #  name: "rss_cve"
+    #  config:
+    #    feed_input:
+    #      - "https://www.theregister.com/security/headlines.atom"
+    #      - "https://isc.sans.edu/dailypodcast.xml"
+    #      - "https://threatpost.com/feed/"
+    #      - "http://feeds.feedburner.com/TheHackersNews?format=xml"
+    #      - "https://www.bleepingcomputer.com/feed/"
+    #      - "https://therecord.media/feed/"
+    #      - "https://blog.badsectorlabs.com/feeds/all.atom.xml"
+    #      - "https://krebsonsecurity.com/feed/"
+    #      - "https://www.darkreading.com/rss_simple.asp"
+    #      - "https://blog.malwarebytes.com/feed/"
+    #      - "https://msrc.microsoft.com/blog/feed"
+    #      - "https://securelist.com/feed"
+    #      - "https://www.crowdstrike.com/blog/feed/"
+    #      - "https://threatconnect.com/blog/rss/"
+    #      - "https://news.sophos.com/en-us/feed/"
+    #      - "https://www.us-cert.gov/ncas/current-activity.xml"
+    #      - "https://www.csoonline.com/feed"
+    #      - "https://www.cyberscoop.com/feed"
+    #      - "https://research.checkpoint.com/feed"
+    #      - "https://feeds.fortinet.com/fortinet/blog/threat-research"
+    #      - "https://www.mcafee.com/blogs/rss"
+    #      - "https://www.digitalshadows.com/blog-and-research/rss.xml"
+    #      - "https://www.nist.gov/news-events/cybersecurity/rss.xml"
+    #      - "https://www.sentinelone.com/blog/rss/"
+    #      - "https://www.bitdefender.com/blog/api/rss/labs/"
+    #      - "https://www.welivesecurity.com/feed/"
+    #      - "https://unit42.paloaltonetworks.com/feed/"
+    #      - "https://mandiant.com/resources/blog/rss.xml"
+    #      - "https://www.wired.com/feed/category/security/latest/rss"
+    #      - "https://www.wired.com/feed/tag/ai/latest/rss"
+    #      - "https://blog.google/threat-analysis-group/rss/"
+    #      - "https://intezer.com/feed/"
+    #    batch_size: 128 # Number of rss feeds to process at a time
+    #    cache_dir: "./.cache/http"
+    #    cooldown_interval_sec: 600
+    #    enable_cache: False
+    #    enable_monitor: True
+    #    interval_sec: 600
+    #    request_timeout_sec: 2.0
+    #    run_indefinitely: true
+    #    stop_after: 0
+    #    web_scraper_config:
+    #      chunk_size: 512
+    #      chunk_overlap: 51
+    #      enable_cache: false
 
     # TODO(Bhargav): Find a dataset for us to use to demo the different filesystem possibilties.
     - type: filesystem
@@ -86,21 +86,21 @@ vdb_pipeline:
           - "models/datasets/training-data/log-parsing-training-data.csv"
         watch: false
         converters_meta:
-            csv:
-              chunk_size: 1024
-              text_column_name: "raw" # Requires same schema for all CSV files.
+          csv:
+            chunk_size: 1024
+            text_column_name: "raw" # Requires same schema for all CSV files.
 
     # Custom source example -- Here we just use the filesystem source but specify the module to use, explicitly.
     - type: custom
       name: "demo_custom_source"
       config:
+        batch_size: 1024
+        chunk_overlap: 51
+        chunk_size: 512
         config_name_mapping: "file_source_config"
-        namespace: "morpheus_examples_llm"
         module_id: "file_source_pipe"
         module_output_id: "output"
-        batch_size: 1024
-        chunk_size: 512
-        chunk_overlap: 51
+        namespace: "morpheus_examples_llm"
         filenames:
           - "morpheus/data/scratch/random_cybersecurity_data.txt"
           - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
@@ -110,13 +110,24 @@ vdb_pipeline:
           - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-5.pdf"
         watch: false
 
-  embeddings:
-    model_name: "all-MiniLM-L6-v2"
+  tokenizer:
+    model_name: "bert-base-uncased-hash"
     model_kwargs:
-      - device: "cuda"
-    encode_kwargs:
-      - normalize_embeddings: true
-    size: 384
+       vocab_hash_file: "data/bert-base-uncased-hash.txt"
+       add_special_tokens: false,
+       column: "content"
+       do_lower_case: true
+       truncation: true
+
+  embeddings:
+    feature_length: 512
+    max_batch_size: 1024
+    model_kwargs:
+      server_url: "http://localhost:8001"
+      force_convert_inputs: true
+      model_name: "all-MiniLM-L6-v2"
+      use_shared_memory: true
+    num_threads: 10
 
   vdb:
     embedding_size: 384  # Size of the embeddings to store in the vector database
