--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -12,14 +12,14 @@ channels:
 - defaults
 dependencies:
 - appdirs
-- arxiv>=1.4
-- benchmark>=1.6.0
-- boost-cpp>=1.82
+- arxiv=1.4
+- benchmark=1.8.3
+- boost-cpp=1.84
 - boto3
-- breathe>=4.34.0
+- breathe=4.35.0
 - clangdev=16
 - click >=8
-- click>=8
+- click=8
 - cmake=3.26.4
 - cuda-cudart-dev=12.1
 - cuda-nvcc
@@ -31,78 +31,79 @@ dependencies:
 - cudf=23.12
 - cuml=23.12.*
 - cxx-compiler
-- cython>=3.0.3
-- dask>=2023.1.1
-- datacompy>=0.8
+- cython=3.0
+- dask=2023.12.1
+- datacompy=0.10
 - dill
-- dill>=0.3.6
-- distributed>=2023.1.1
-- doxygen>=1.9.2
+- dill=0.3.7
+- distributed=2023.12.1
+- doxygen=1.10.0
 - elasticsearch==8.9.0
-- environs>=9.5
-- exhale>=0.3.6
-- feedparser>=6.0.10
+- environs=9.5
+- exhale=0.3.6
+- feedparser=6.0.10
 - flake8
 - gcc_linux-64=11.2
 - git-lfs
 - gputil
 - grpcio
 - gxx_linux-64=11.2
-- huggingface_hub>=0.10.1
+- huggingface_hub=0.20.2
 - include-what-you-use=0.20
 - ipython
 - isort
-- langchain>=0.0.190
-- librdkafka>=1.9.2
-- libwebp>=1.3.2
-- minio>=7.1
-- mlflow>=2.2.1,<3
+- langchain=0.0.190
+- librdkafka=2.2
+- libwebp=1.3.2
+- minio=7.2
+- mlflow=2.9.2
 - mrc=24.03
-- myst-parser>=0.17.2
+- myst-parser=0.18.1
 - nbsphinx
-- newspaper3k>=0.2
-- ninja>=1.10
+- newspaper3k=0.2
+- ninja=1.11
 - nlohmann_json=3.9
 - nodejs=18.*
+- numpydoc=1.5
 - numpydoc>=1.4
-- nvtabular>=23.08
-- openai>=0.28
-- papermill>=2.3.4
+- nvtabular=23.08.00
+- openai=0.28
+- papermill=2.4.0
 - pip
-- pluggy>=1.0
+- pluggy=1.3
 - pre-commit
-- protobuf>=4.21.*
+- protobuf=4.24
 - pybind11-stubgen=0.10
-- pylint>=2.17.4
-- pypdf>=3.16
+- pylint=3.0.3
+- pypdf=3.17.4
 - pytest
 - pytest-asyncio
-- pytest-benchmark>=4.0
+- pytest-benchmark=4.0
 - pytest-cov
-- python-confluent-kafka>=1.9.2
-- python-dotenv>=1.0
+- python-confluent-kafka=2.2.0
+- python-dotenv=1.0
 - python-graphviz
 - python=3.10
 - pytorch-cuda
 - pytorch=*=*cuda*
-- rapidjson>=1.1.0
-- requests-cache>=1.1
-- s3fs>=2023.6
-- scikit-build>=0.17.1
-- scikit-learn>=1.2.2
+- rapidjson=1.1.0
+- requests-cache=1.1
+- s3fs=2023.12.2
+- scikit-build=0.17.6
+- scikit-learn=1.3.2
 - sentence-transformers
 - sphinx
 - sphinx_rtd_theme
 - sqlalchemy
-- tqdm>=4
-- transformers>=4.30.2
-- tritonclient>=2.26
-- typing_utils>=0.1
-- ucx>=1.15
-- ujson>=5.8
-- watchdog>=2.1
+- tqdm=4
+- transformers=4.36.2
+- tritonclient=2.34
+- typing_utils=0.1
+- ucx=1.15
+- ujson=5.9
+- watchdog=3.0
 - websockets
-- yapf>=0.40.1
+- yapf=0.40.1
 - pip:
   - --find-links https://data.dgl.ai/wheels-test/repo.html
   - --find-links https://data.dgl.ai/wheels/cu121/repo.html
