--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -12,12 +12,12 @@ channels:
 - defaults
 dependencies:
 - appdirs
-- benchmark>=1.6.0
-- boost-cpp>=1.82
-- breathe>=4.34.0
+- benchmark=1.8.3
+- boost-cpp=1.84
+- breathe=4.35.0
 - clangdev=16
 - click >=8
-- click>=8
+- click=8
 - cmake=3.26.4
 - cuda-cudart-dev=12.1
 - cuda-nvcc
@@ -28,13 +28,13 @@ dependencies:
 - cuda-version=12.1
 - cudf=23.12
 - cxx-compiler
-- cython>=3.0.3
-- datacompy>=0.8
+- cython=3.0
+- datacompy=0.10
 - dill
-- doxygen>=1.9.2
+- doxygen=1.10.0
 - elasticsearch==8.9.0
-- exhale>=0.3.6
-- feedparser>=6.0.10
+- exhale=0.3.6
+- feedparser=6.0.10
 - flake8
 - gcc_linux-64=11.2
 - git-lfs
@@ -44,45 +44,46 @@ dependencies:
 - include-what-you-use=0.20
 - ipython
 - isort
-- librdkafka>=1.9.2
-- mlflow>=2.2.1,<3
+- librdkafka=2.2
+- mlflow=2.9.2
 - mrc=24.03
-- myst-parser>=0.17.2
+- myst-parser=0.18.1
 - nbsphinx
-- ninja>=1.10
+- ninja=1.11
 - nlohmann_json=3.9
 - nodejs=18.*
+- numpydoc=1.5
 - numpydoc>=1.4
-- nvtabular>=23.08
+- nvtabular=23.08.00
 - pip
-- pluggy>=1.0
+- pluggy=1.3
 - pre-commit
-- protobuf>=4.21.*
+- protobuf=4.24
 - pybind11-stubgen=0.10
-- pylint>=2.17.4
+- pylint=3.0.3
 - pytest
 - pytest-asyncio
-- pytest-benchmark>=4.0
+- pytest-benchmark=4.0
 - pytest-cov
-- python-confluent-kafka>=1.9.2
+- python-confluent-kafka=2.2.0
 - python-graphviz
 - python=3.10
 - pytorch-cuda
 - pytorch=*=*cuda*
-- rapidjson>=1.1.0
-- requests-cache>=1.1
-- scikit-build>=0.17.1
-- scikit-learn>=1.2.2
+- rapidjson=1.1.0
+- requests-cache=1.1
+- scikit-build=0.17.6
+- scikit-learn=1.3.2
 - sphinx
 - sphinx_rtd_theme
 - sqlalchemy
-- tqdm>=4
-- tritonclient>=2.26
-- typing_utils>=0.1
-- ucx>=1.15
-- watchdog>=2.1
+- tqdm=4
+- tritonclient=2.34
+- typing_utils=0.1
+- ucx=1.15
+- watchdog=3.0
 - websockets
-- yapf>=0.40.1
+- yapf=0.40.1
 - pip:
   - databricks-connect
   - milvus==2.3.2
