--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -133,21 +133,21 @@ dependencies:
           - mrc=24.03 # should this be in build, or somewhere else?
           - gcc_linux-64=11.2
           - gxx_linux-64=11.2
-          - boost-cpp>=1.82
+          - boost-cpp=1.84
           - cmake=3.26.4
           - cuda-nvcc
           - cudf=23.12
           - cxx-compiler
-          - cython>=3.0.3
-          - librdkafka>=1.9.2
-          - ninja>=1.10
+          - cython=3.0
+          - librdkafka=2.2
+          - ninja=1.11
           - nlohmann_json=3.9
-          - protobuf>=4.21.*
+          - protobuf=4.24
           - pybind11-stubgen=0.10
-          - rapidjson>=1.1.0
-          - scikit-build>=0.17.1
-          - tritonclient>=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
-          - ucx>=1.15
+          - rapidjson=1.1.0
+          - scikit-build=0.17.6
+          - tritonclient=2.34
+          - ucx=1.15
 
   checks:
     common:
@@ -169,62 +169,61 @@ dependencies:
           - flake8
           - include-what-you-use=0.20
           - isort
-          - pylint>=2.17.4 #,<2.18 # 2.17.4 contains a fix for toml support
-          - yapf>=0.40.1
+          - pylint=3.0.3
+          - yapf=0.40.1
 
   docs:
     common:
       - output_types: [conda]
         packages:
-          - breathe>=4.34.0
-          - doxygen>=1.9.2
-          - exhale>=0.3.6
+          - breathe=4.35.0
+          - doxygen=1.10.0
+          - exhale=0.3.6
           - ipython
-          - myst-parser>=0.17.2
+          - myst-parser=0.18.1
           - nbsphinx
           - python-graphviz
           - sphinx
           - sphinx_rtd_theme
           - numpydoc>=1.4
-          - pluggy>=1.0
+          - pluggy=1.3
           - &click click >=8
 
   benchmark_cpp:
     common:
       - output_types: [conda]
         packages:
-          - benchmark>=1.6.0
+          - benchmark=1.8.3
 
   examples:
     common:
       - output_types: [conda]
         packages:
-          - arxiv>=1.4
+          - arxiv=1.4
           - boto3
           - cuml=23.12.*
-          - dask>=2023.1.1
+          - dask=2023.12.1
           # - dglteam/label/cu121::dgl
-          - dill>=0.3.6
-          - distributed>=2023.1.1
-          - huggingface_hub>=0.10.1 # work-around for https://github.com/UKPLab/sentence-transformers/issues/1762
-          - langchain>=0.0.190
-          - libwebp>=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
-          #- libwebp=1.72
-          - mlflow>=2.2.1,<3
-          - newspaper3k>=0.2
-          - openai>=0.28
-          - papermill>=2.3.4
-          - pypdf>=3.16
-          - s3fs>=2023.6
+          - dill=0.3.7
+          - distributed=2023.12.1
+          - huggingface_hub=0.20.2 # work-around for https://github.com/UKPLab/sentence-transformers/issues/1762
+          - langchain=0.0.190
+          - libwebp=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
+          - mlflow=2.9.2
+          - newspaper3k=0.2
+          - openai=0.28
+          - papermill=2.4.0
+          - pypdf=3.17.4
+          - s3fs=2023.12.2
           - sentence-transformers
-          - transformers>=4.30.2 # newer versions are incompatible with our pinned version of huggingface_hub
+          - transformers=4.36.2 # newer versions are incompatible with our pinned version of huggingface_hub
           ####### Pip Transitive Dependencies (keep sorted!) #######
           # These are dependencies that are available on conda, but are required by the pip packages listed below. Its much
           # better to install them with conda than pip to allow for better dependency resolution.
-          - environs>=9.5
-          - minio>=7.1
-          - python-dotenv>=1.0
-          - ujson>=5.8
+          - environs=9.5
+          - minio=7.2
+          - python-dotenv=1.0
+          - ujson=5.9
           ####### Pip Dependencies (keep sorted!) #######
           - pip
           - pip:
@@ -242,26 +241,26 @@ dependencies:
       - output_types: [conda]
         packages:
           - appdirs
-          - click>=8
-          - datacompy>=0.8
+          - click=8
+          - datacompy=0.10
           - dill
           - elasticsearch==8.9.0
-          - feedparser>=6.0.10
+          - feedparser=6.0.10
           - gputil
           - grpcio
-          - mlflow>=2.2.1,<3
-          - numpydoc>=1.4
-          - nvtabular>=23.08
-          - python-confluent-kafka>=1.9.2
+          - mlflow=2.9.2
+          - numpydoc=1.5
+          - nvtabular=23.08.00
+          - python-confluent-kafka=2.2.0
           - python-graphviz
           - pytorch-cuda
           - pytorch=*=*cuda*
-          - requests-cache>=1.1
-          - scikit-learn>=1.2.2
+          - requests-cache=1.1
+          - scikit-learn=1.3.2
           - sqlalchemy
-          - tqdm>=4
-          - typing_utils>=0.1
-          - watchdog>=2.1
+          - tqdm=4
+          - typing_utils=0.1
+          - watchdog=3.0
           - websockets
           - pip
           - pip:
@@ -276,7 +275,7 @@ dependencies:
           - nodejs=18.*
           - pytest
           - pytest-asyncio
-          - pytest-benchmark>=4.0
+          - pytest-benchmark=4.0
           - pytest-cov
           - pip
           - pip:
