--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -107,14 +107,13 @@ files:
 
 
 channels:
-  - conda-forge
-  - huggingface
   - rapidsai
   - nvidia/label/cuda-11.8.0
   - nvidia
-  - rapidsai-nightly
   - nvidia/label/dev
+  - huggingface
   - pytorch
+  - conda-forge
   - dglteam/label/cu118
 
 dependencies:
@@ -126,6 +125,8 @@ dependencies:
           - mrc=24.03 # should this be in build, or somewhere else?
           - gcc_linux-64=11.2
           - gxx_linux-64=11.2
+          - cachetools=5.0.0
+          - ccache>=3.7
           - cmake=3.25
           - boost-cpp=1.82
           - cuda-nvcc
@@ -135,7 +136,10 @@ dependencies:
           - librdkafka=1.9.2
           - ninja=1.10
           - nlohmann_json=3.9
+          - pandas=1.3
           - protobuf=4.21.*
+          - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
+          - pyarrow-hotfix
           - pybind11-stubgen=0.10
           - rapidjson=1.1.0
           - scikit-build=0.17.1
@@ -246,6 +250,7 @@ dependencies:
           - numpy>=1.21,<1.25
           - numpydoc=1.4
           - nvtabular=23.06
+          - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
           - pyarrow-hotfix
           - python-confluent-kafka=1.9.2
           - python-graphviz
@@ -258,6 +263,13 @@ dependencies:
           - typing_utils=0.1
           - watchdog=2.1
           - websockets
+
+          ####### Pip Transitive Dependencies (keep sorted!) #######
+          # These are dependencies that are available on conda, but are required by the pip packages listed below. Its much
+          # better to install them with conda than pip to allow for better dependency resolution.
+          - kafka-python=2.0
+          - port-for=0.7
+          - py4j=0.10
           - pip
           - pip:
             - databricks-connect
