--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -68,6 +68,7 @@ dependencies:
     - libgrpc>=1.49
     - librdkafka=1.9.2
     - libwebp>=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
+    - lxml=4.9.1
     - mlflow>=2.2.1,<3
     - mrc=24.03
     - networkx>=2.8
